# tauri-plugin-screen-lock-status

./: .gitignore  Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: audit.yml  clippy.yml  covector-version-or-publish.yml  format.yml  test.yml
examples/tauri-app/: package.json  vite.config.ts
examples/tauri-app/src/: App.vue
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: main.rs
src/: lib.rs
src/windows/: mod.rs
webview-dist/: index.js
webview-src/: index.ts
