[package]
name = "tauri_plugin_screen_lock_status"
version = "0.0.1"
authors = [ "ren40" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.5.4" }
serde = "1.0"
thiserror = "1.0"


[dependencies.windows]
version= "0.*"
features= [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse"
]
