[package]
name = "tauri-plugin-screen-lock-status"
version = "0.0.1"
authors = [ "ren40" ]
description = "This plugin helps track the lock status for the current session"
edition = "2021"
readme = "README.md"
rust-version = "1.60"
exclude = ["/examples"]
repository = "https://github.com/ren40/tauri-plugin-screen-lock-status"
keywords = ["tauri", "session lock", "detect session lock"]

[dependencies]
tauri = { version = "1.5.4" }

[target."cfg(linux)".dependencies]
zbus = "3.14.1"

[target."cfg(windows)".dependencies.windows]
version= "0.*"
features= [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse"
]
